# tinylog

./: .gitignore  .gitmessage.txt  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  pom.xml
.github/workflows/: pages.yml
docs/: index.html  java-logging-configuration.md  log-storage-structure.md  protobuf-java-generation.md  site.css
docs/zh-CN/: log-storage-structure.md  protobuf-java-generation.md
scripts/: generate_demo_gif.py  generate_log_fixture.py  package-release.sh  tinylog-convert.sh  tinylog-open.sh  tinylog-view.sh
tinylog-converter/: Cargo.toml
tinylog-converter/src/: lib.rs  main.rs
tinylog-core/: pom.xml
tinylog-core/src/main/java/com/huimang/tinylog/proto/: PrototypeLogLevel.java  PrototypeLogQuery.java  PrototypeLogQueryOrBuilder.java  PrototypeLogRecord.java  PrototypeLogRecordOrBuilder.java  TinylogPrototypeProto.java
tinylog-core/src/main/proto/tinylog/: prototype.proto
tinylog-core/src/main/resources/: tinylog-core.properties
tinylog-example/: pom.xml
tinylog-example/src/main/java/com/huimang/tinylog/example/: TinylogLargeTogExample.java  TinylogSdkYamlExample.java
tinylog-example/src/main/resources/: tinylog-large.yml  tinylog.yml
tinylog-rust-common/: Cargo.toml  build.rs
tinylog-rust-common/src/: format.rs  lib.rs  protobuf.rs
tinylog-sdk/: pom.xml
tinylog-sdk/src/main/java/com/huimang/tinylog/sdk/: LogContext.java  Logger.java  (+13 more)
tinylog-viewer/: Cargo.toml
tinylog-viewer/src/: app.rs  converter.rs  format.rs  lib.rs  main.rs  session.rs
tinylog-viewer/src/viewer/: app.rs  config.rs  mod.rs  session.rs
(+39 files in other folders)
